tests/snapshots/files__repro_new_backend_prims_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Fiat (= (predicate 1 false) (predicate 1 false)))
    (Fiat (= false false)))
  (substitution (@n false)))
predicate: 2
