tests/snapshots/files__repro_noteqbug.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  i64-5871781006564002453:
    op: "1"
    children: []
    eclass: i64-5871781006564002453
    cost: 0
  R-5871781006564002453:
    op: R
    children:
      - i64-5871781006564002453
    eclass: "0"
    cost: 1
  i64-11743562013128004906:
    op: "2"
    children: []
    eclass: i64-11743562013128004906
    cost: 0
  R-11743562013128004906:
    op: R
    children:
      - i64-11743562013128004906
    eclass: "0"
    cost: 1
root_eclasses: []
class_data:
  "0":
    type: r
  i64-5871781006564002453:
    type: i64
  i64-11743562013128004906:
    type: i64

