tests/snapshots/files__repro_querybug.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  Empty-0:
    op: Empty
    children: []
    eclass: "0"
    cost: 9223372036854776000
  mylist-0:
    op: mylist
    children: []
    eclass: "1"
    cost: 9223372036854776000
  i64-5871781006564002453:
    op: "1"
    children: []
    eclass: i64-5871781006564002453
    cost: 0
  Cons-956286968014291186:
    op: Cons
    children:
      - i64-5871781006564002453
      - Empty-0
    eclass: "1"
    cost: 1
  Unit-0:
    op: ()
    children: []
    eclass: Unit-0
    cost: 0
  eq-0:
    op: eq
    children:
      - Empty-0
      - Empty-0
    eclass: Unit-0
    cost: 1
  eq-6828067974578293639:
    op: eq
    children:
      - Cons-956286968014291186
      - mylist-0
    eclass: Unit-0
    cost: 1
root_eclasses: []
class_data:
  "0":
    type: list
  "1":
    type: list
  i64-5871781006564002453:
    type: i64
  Unit-0:
    type: Unit

