tests/snapshots/files__repro_querybug2_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let prop0 (= (OtherNum 2) (Num 2)))
(Trans
  prop0
  (Rule
    prop0
    (name
      "(rule ((= y 2))
      ((union (OtherNum y) (Num y)))
         )")
    (premises (Fiat (= 2 2)))
    (substitution (y 2)))
  (Fiat (= (Num 2) (Num 2))))
Num: 1
OtherNum: 1
