tests/snapshots/files__repro_querybug4.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  i64-11743562013128004906:
    op: "2"
    children: []
    eclass: i64-11743562013128004906
    cost: 0
  Num-11743562013128004906:
    op: Num
    children:
      - i64-11743562013128004906
    eclass: "1"
    cost: 1
  OtherNum-11743562013128004906:
    op: OtherNum
    children:
      - i64-11743562013128004906
    eclass: "1"
    cost: 1
root_eclasses: []
class_data:
  "1":
    type: Nat
  i64-11743562013128004906:
    type: i64

