tests/snapshots/files__repro_querybug4_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let prop0 (= (OtherNum 2) (Num 2)))
(let prf0 (Fiat (= 2 2)))
(Trans
  prop0
  (Rule
    prop0
    (name
      "(rule ((= fvar5__ 2)
       (= fvar6__ fvar5__)
       (= y fvar5__))
      ((union (OtherNum fvar5__) (Num fvar5__)))
         )")
    (premises prf0 prf0 prf0)
    (substitution (y 2) (fvar5__ 2) (fvar6__ 2)))
  (Fiat (= (Num 2) (Num 2))))
Num: 1
OtherNum: 1
