tests/snapshots/files__repro_querybug_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
Cons: 1
Cons: 1
EmptyConst: 1
EmptyConst: 1
eq: 2
eq: 2
